--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
         <section id="home">
             <h2>Welcome to Teamwork</h2>
             <p>Teamwork is an internal social network for employees.</p>
-            <!-- Add images here -->
-            <img src="images/team.jpg" alt="Teamwork Quote">
-            <img src="images/team1.jpg" alt="Teamwork Meeting">
+            <img src="images/team.jpg" alt="Team">
+            <img src="images/team1.jpg" alt="Team1">
         </section>
         
         <section id="signup" class="hidden">
             <h2>Sign Up</h2>
             <form id="signupForm">
-                <label for="firstname">First Name:</label>
+                <label for="for">First Name:</label>
                 <input type="text" id="firstname" name="firstname" required>
                 <label for="lastname">Last Name:</label>
                 <input type="text" id="lastname" name="lastname" required>
